--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
 </head>
 <body>
   <main>
-  <nav>
- <header>
-      <ul>
-    <li><a href=""><span>Web</span><span>Studio</span></a></li>  
+   <nav>
+      <a href=""><span>Web</span><span>Studio</span></a>
+   <ul>
+       <li><a href="">Студия</a></li>  
+       <li><a href="">Портфолио</a></li>  
+       <li><a href="">Контакты</a></li>  
+  </ul> 
+  </nav>
 
-    <li><a href="">Студия</a></li>  
-    <li><a href="">Портфолио</a></li>  
-    <li><a href="">Контакты</a></li>  
- 
+ <ul>
     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>  
     <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>  
-      </ul> 
-  </header>
-</nav>
+ </ul> 
+ 
+
  
  <!--секция-->
 
@@ -72,14 +73,14 @@
       <p>UI Designer</p></li>
  </ul>
   </section>
+</main>
    <!--секция5-->
    <footer>
    <a href=""><span>Web</span><span>Studio</span></a>
      <address>г. Киев, пр-т Леси Украинки, 26</address>
      <p><a href="mailto:info@example.com">info@example.com</a></p>
      <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
- </footer>
-</main>
+  </footer>
 
 
  </body>
