исправленое домашнее дз

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-  <main>
+  <header>
    <nav>
       <a href=""><span>Web</span><span>Studio</span></a>
    <ul>
@@ -20,11 +20,10 @@
     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>  
     <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>  
  </ul> 
- 
-
+ </header>
  
  <!--секция-->
-
+<main>
 <section>
      <h1>Эффективные решения для вашего бизнеса</h1>
      <button>Заказать услугу</button>
