--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
    <footer>
    <a href=""><span>Web</span><span>Studio</span></a>
      <address>г. Киев, пр-т Леси Украинки, 26</address>
-     <p><a href="mailto:info@example.com">info@example.com</a></p>
-     <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
+     <ul>
+    <li><a href="mailto:info@example.com">info@example.com</a></li> 
+    <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+    </ul>
   </footer>
 
 
